!80 优化选择自选样式 * Merge branch 'develop' into hhc-repair1 * 优化选择自选样式 * Update MarqueDialog.tsx * 将客制化账套挪到DitengCommon类中 * Merge branch 'develop' into hhc-repair1 * 增加查询自动聚焦到查询条件上 * 型号增加展开收缩功能，优化DialogApi中调用服务的写法 * 替换旧版aui写法

--- a/src/diteng/GetMarque.css
+++ b/src/diteng/GetMarque.css
@@ -4,7 +4,6 @@
 
 .headContent {
     padding: 1rem;
-    max-height: 20rem;
     overflow: auto;
 }
 
@@ -52,8 +51,21 @@
     height: auto;
 }
 
+@media screen and (min-width: 768px) {
+    .headContent {
+        max-height: 20rem;
+    }
+}
+
 @media screen and (max-width: 767px) {
     .head ul li {
         font-size: 1rem;
+    }
+    .head {
+        flex-direction: column;
+    }
+    .head ul {
+        width: 100%;
+        flex-direction: row;
     }
 }
