--- a/src/diteng/MarqueDialog.css
+++ b/src/diteng/MarqueDialog.css
@@ -89,4 +89,11 @@
     .head ul li {
         font-size: 1rem;
     }
+    .head {
+        flex-direction: column;
+    }
+    .head ul {
+        width: 100%;
+        flex-direction: row;
+    }
 }
